# drug-dose-recommendation

./: .gitignore  AGENTS.md  README.md  demo_full_pipeline.py  demo_phase1.py  demo_phase2.py  demo_phase3.py  demo_phase4.py  pyproject.toml  requirements.txt
notebooks/: drug_dose_recommendation_pipeline.ipynb
src/drug_dose/: __init__.py
src/drug_dose/data/: __init__.py  feature_config.py  synthetic_generator.py
src/drug_dose/digital_twin/: __init__.py  digital_twin.py  gan_module.py  transformer_encoder.py
src/drug_dose/preprocessing/: __init__.py  pipeline.py
src/drug_dose/rag/: __init__.py  document_store.py  embeddings.py  rag_pipeline.py  retriever.py
src/drug_dose/rag/data/: clinical_documents.json
src/drug_dose/rl/: __init__.py  policy_network.py  trainer.py
src/drug_dose/xai/: __init__.py  llm_fusion.py  shap_explainer.py
